--- a/templates/admin/encrypt.tmpl
+++ b/templates/admin/encrypt.tmpl
@@ -2,9 +2,11 @@
   <div class="container">
     <h1>Encrypt</h1>
     <form method="post" action="">
-      <input type="radio" name="idType" value="showid" checked> Show Id<br>
-      <input type="radio" name="idType" value="listid"> List Id<br>
-      <label for="">Id</label> : <input name="id" value='{{.showid}}' /><br>
+      <input type="radio" name="idType" value="mthaiparseurl" checked> MThai Parse Url<br />
+      -<br />
+      <input type="radio" name="idType" value="showid"> Show Id<br />
+      <input type="radio" name="idType" value="listid"> List Id<br />
+      <label for="">Id</label> : <input name="id" value='{{.showid}}' /><br />
       <input type="submit" class="btn btn-primary btn-lg" role="button" value="Submit">
     </form>
     <h3>{{.message}}</h3>
