Can Reject Video

--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -50,7 +50,7 @@
       <input type="button" id="btn_clear" value="Clear" />
       <br />
       <br />
-      <input type="submit" value="Deactive" />
+      <input type="submit" value="Reject" />
       <table>
         <thead>
             <th><input type="checkbox" id="cb_bot_video" /></th>
