--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -1,5 +1,9 @@
+<link rel="stylesheet" href="/static/chosen/chosen.min.css" />
+<script src="/static/chosen/chosen.jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({allow_single_deselect:true}); </script>
 <script type="text/javascript">
   $(function(){
+    $(".chzn-select").chosen();
     var $sumId = $("#sumId");
     $(".txt_video_id").click(function(){
       var $videoId = $(this);
@@ -28,7 +32,7 @@
     <fieldset>
       <legend>Bot Video</legend>
     <form method="GET" action="/admin/botvideo">
-      <select name="username">
+      <select name="username" class="chzn-select" style="width:350px;" data-placeholder="Choose a Username...">
         <option value="">All</option>
         {{range .botUsers}}
           <option value="{{.Username}}" {{if .IsSelected}} selected="selected" {{end}}>{{.Description}}</option>
