--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -1,3 +1,4 @@
+{{ define "title" }}TV Thailand - Bot Video{{ end }}
 <link rel="stylesheet" href="/static/chosen/chosen.min.css" />
 <script src="/static/chosen/chosen.jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({allow_single_deselect:true}); </script>
@@ -20,7 +21,7 @@
       $sumId.val(sumId)
 
       var title = $videoId.closest("tr").find("td:eq(2)").text().trim();
-  		$("#txt_title").val(title);
+  		$("#inputTitle").val(title);
 
       var urlUpdate = "http://tv-cms.makathon.com/bookmarktv.php?id=" + sumId + "&title=" + title;
       $("#btn_update").attr("href", urlUpdate);
@@ -40,33 +41,58 @@
 
 <div class="jumbotron">
   <div class="container">
+    <div class="">
+      <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/bookmarktv">Link</a>
+      <a target="_blank" class="btn btn-default" href="http://tv.makathon.com/index.php/api/clearCache">Clear Cache</a>
+    </div>
     <fieldset>
       <legend>Bot Video</legend>
-    <form if="frmSearch" method="GET" action="/admin/botvideo">
-      <select name="username" class="chzn-select" style="width:350px;" data-placeholder="Choose a Username...">
-        <option value="all">All</option>
-        {{range .botUsers}}
-          <option value="{{.Username}}" {{if .IsSelected}} selected="selected" {{end}}>{{.Description}} - {{.Username}}</option>
-        {{end}}
-      </select>
-      <select name="status">
-        {{range .botStatuses}}
-          <option value="{{.Id}}" {{if .IsSelected}} selected="selected" {{end}}>{{.Name}}</option>
-        {{end}}
-      </select>
+      <form class="form-horizontal" role="form" method="GET" action="/admin/botvideo">
+      <div class="form-group">
+        <label for="inputUsername" class="col-sm-2 control-label">Username</label>
+        <div class="col-sm-10">
+          <select id="inputUsername" name="username" class="chzn-select" style="width:350px;" data-placeholder="Choose a Username...">
+            <option value="all">All</option>
+            {{range .botUsers}}
+              <option value="{{.Username}}" {{if .IsSelected}} selected="selected" {{end}}>{{.Description}} - {{.Username}}</option>
+            {{end}}
+          </select>
+
+          <select id="inputStatus" name="status">
+            {{range .botStatuses}}
+              <option value="{{.Id}}" {{if .IsSelected}} selected="selected" {{end}}>{{.Name}}</option>
+            {{end}}
+          </select>
+
+          <input type="submit" class="btn btn-default" value="Search" />
+        </div>
+      </div>
       <input type="hidden" id="search_time" name="time" value="" />
-       <input type="submit" class="btn btn-default" />
     </form>
     <br />
     <h4></h4>
-    <form method="POST" action="/admin/botvideo">
+    <form class="form-horizontal" role="form" method="POST" action="/admin/botvideo">
       <input type="hidden" name="username" value="{{.formSearch.Username}}" />
       <input type="hidden" name="status" value="{{.formSearch.Status}}" />
-      <label>Title :</label> <input type="text" id="txt_title" size="100" value="" /><br /><br />
-      <label>Id :</label> <input type="text" id="sumId" size="100" value="" />
-      <a class="btn btn-success" id="btn_update" target="_blank" href="" >Update</a>
-      <input type="button" class="btn btn-warning" id="btn_clear" value="Clear" />
-      <br />
+
+      <div class="form-group">
+        <label for="inputTitle" class="col-sm-2 control-label">Title</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="inputTitle" placeholder="Title">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="sumId" class="col-sm-2 control-label">Sum Id</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="sumId" placeholder="Sum Id">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <a class="btn btn-success" id="btn_update" target="_blank" href="" >Update</a>
+          <input type="button" class="btn btn-warning" id="btn_clear" value="Clear" />
+        </div>
+      </div>
       <br />
       <label>Change status to : </label>
       <input type="submit" class="btn btn-danger" name="update_status" value="Rejected" />
