--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -41,12 +41,13 @@
 
 <div class="jumbotron">
   <div class="container">
-    <div class="">
-      <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/bookmarktv">Link</a>
-      <a target="_blank" class="btn btn-default" href="http://tv.makathon.com/index.php/api/clearCache">Clear Cache</a>
-    </div>
     <fieldset>
-      <legend>Bot Video</legend>
+      <legend><a href="/admin/botvideo">Bot Video</a>
+        <div class="pull-right">
+        <a target="_blank" class="btn btn-default" href="http://tv-cms.makathon.com/bookmarktv">Link</a>
+        <a target="_blank" class="btn btn-default" href="http://tv.makathon.com/index.php/api/clearCache">Clear Cache</a>
+      </div>
+      </legend>
       <form class="form-horizontal" role="form" method="GET" action="/admin/botvideo">
       <div class="form-group">
         <label for="inputUsername" class="col-sm-2 control-label">Username</label>
