--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -13,7 +13,7 @@
         <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     </head>
     <body>
-      <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
