--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -1,44 +1,5 @@
 {{ define "title" }}TV Thailand - Bot Video{{ end }}
 <link rel="stylesheet" href="/static/chosen/chosen.min.css" />
-<script src="/static/chosen/chosen.jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript"> $(".chzn-select").chosen(); $(".chzn-select-deselect").chosen({allow_single_deselect:true}); </script>
-<script type="text/javascript">
-  $(function(){
-    $("#btn_update").hide();
-    $(".chzn-select").chosen();
-    $("#search_time").val($.now());
-
-    var $sumId = $("#sumId");
-    $(".txt_video_id").click(function(){
-      var $videoId = $(this);
-      $videoId.select();
-      var sumId = $sumId.val()
-      if ($sumId.val() == "") {
-        sumId = $videoId.val();
-      } else {
-        sumId = $sumId.val() + "," + $videoId.val();
-      }
-      $sumId.val(sumId)
-
-      var title = $videoId.closest("tr").find("td:eq(2)").text().trim();
-  		$("#inputTitle").val(title);
-
-      var urlUpdate = "http://tv-cms.makathon.com/bookmarktv.php?id=" + sumId + "&title=" + title;
-      $("#btn_update").attr("href", urlUpdate);
-      $("#btn_update").show();
-    });
-
-    $("#btn_clear").click(function(){
-      $sumId.val("");
-      $("#btn_update").hide();
-    });
-
-    $("#cb_bot_video").click(function(){
-      $('.cb_bot_video').prop('checked', $(this).prop('checked'));
-    });
-  });
-</script>
-
 <div class="jumbotron">
   <div class="container">
     <fieldset>
@@ -52,7 +13,7 @@
       <div class="form-group">
         <label for="inputUsername" class="col-sm-2 control-label">Username</label>
         <div class="col-sm-10">
-          <select id="inputUsername" name="username" class="chzn-select" style="width:350px;" data-placeholder="Choose a Username...">
+          <select id="inputUsername" name="username" class="chosen-select" style="width:350px;">
             <option value="all">All</option>
             {{range .botUsers}}
               <option value="{{.Username}}" {{if .IsSelected}} selected="selected" {{end}}>{{.Description}} - {{.Username}}</option>
@@ -79,13 +40,13 @@
       <div class="form-group">
         <label for="inputTitle" class="col-sm-2 control-label">Title</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="inputTitle" placeholder="Title">
+          <input type="text" class="form-control" id="inputTitle" placeholder="">
         </div>
       </div>
       <div class="form-group">
         <label for="sumId" class="col-sm-2 control-label">Sum Id</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="sumId" placeholder="Sum Id">
+          <input type="text" class="form-control" id="sumId" placeholder="">
         </div>
       </div>
       <div class="form-group">
@@ -111,7 +72,7 @@
           <tr>
             <td><input type="checkbox" class="cb_bot_video" name="bot_video[]" value="{{.Id}}"/></td>
             <td><a target="_blank" href="http://www.thetvthailand.com/cms/findvideo/?url=https://www.youtube.com/{{.UserType}}/{{.Username}}/videos">{{.Description}}</a>
-              <a href="/admin/botvideo?username={{.Username}}&status={{.Status}}"><span class="glyphicon glyphicon-th-list"></span>
+              <a href="/admin/botvideo?username={{.Username}}&amp;status={{.Status}}"><span class="glyphicon glyphicon-th-list"></span>
             </td>
             <td>{{.Title}}</td><td><input type="text" class="txt_video_id" size="10" value="{{.VideoId}}" /></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v={{.VideoId}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
@@ -123,3 +84,41 @@
     </form>
   </div>
 </div>
+
+<script src="/static/chosen/chosen.1.0.jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+  $(function(){
+    $(".chosen-select").chosen();
+    $("#btn_update").hide();
+    $("#search_time").val($.now());
+
+    var $sumId = $("#sumId");
+    $(".txt_video_id").click(function(){
+      var $videoId = $(this);
+      $videoId.select();
+      var sumId = $sumId.val()
+      if ($sumId.val() == "") {
+        sumId = $videoId.val();
+      } else {
+        sumId = $sumId.val() + "," + $videoId.val();
+      }
+      $sumId.val(sumId)
+
+      var title = $videoId.closest("tr").find("td:eq(2)").text().trim();
+      $("#inputTitle").val(title);
+
+      var urlUpdate = "http://tv-cms.makathon.com/bookmarktv.php?id=" + sumId + "&title=" + title;
+      $("#btn_update").attr("href", urlUpdate);
+      $("#btn_update").show();
+    });
+
+    $("#btn_clear").click(function(){
+      $sumId.val("");
+      $("#btn_update").hide();
+    });
+
+    $("#cb_bot_video").click(function(){
+      $('.cb_bot_video').prop('checked', $(this).prop('checked'));
+    });
+  });
+</script>
