--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
-{{ define "title" }}TV Thailand{{ end }}
+{[{ define "title" }]}TV Thailand{[{ end }]}
 
-{{ define "content" }}
+{[{ define "content" }]}
   <div class="jumbotron">
     <div class="container">
       <h1>Hello, world!</h1>
@@ -11,8 +11,8 @@
 
     <!-- <h1>Categories</h1>
     <ul>
-      {{range .results}}
-      <li>{{.TopicID}} :: {{.Name}}</li>
-      {{end}}
+      {[{range .results}]}
+      <li>{[{.TopicID}]} :: {[{.Name}]}</li>
+      {[{end}]}
     </ul> -->
-{{ end }}
+{[{ end }]}
