--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ template "title" . }}</title>
+        <title>{[{ template "title" . }]}</title>
 
         <!-- Bootstrap -->
         <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{{ template "title" . }}</a>
+            <a class="navbar-brand" href="#">{[{ template "title" . }]}</a>
           </div>
           <div class="navbar-collapse collapse">
             <form class="navbar-form navbar-right" role="form">
@@ -39,7 +39,7 @@
       </div>
 
       <div id="content" role="main">
-          {{ template "content" . }}
+          {[{ template "content" . }]}
 
           <footer id="footer">
               Code Mobi © 2013
