--- a/templates/admin/encrypt.tmpl
+++ b/templates/admin/encrypt.tmpl
@@ -6,14 +6,14 @@
       -<br />
       <input type="radio" name="idType" value="showid"> Show Id<br />
       <input type="radio" name="idType" value="listid"> List Id<br />
-      <label for="">Id</label> : <input name="id" value='{{.showid}}' /><br />
+      <label for="">Id</label> : <input name="id" value='{[{.showid}]}' /><br />
       <input type="submit" class="btn btn-primary btn-lg" role="button" value="Submit">
     </form>
-    <h3>{{.message}}</h3>
+    <h3>{[{.message}]}</h3>
     <ul>
-      {{range .results}}
-      <li>{{.ShowId}} {{.ListId}} {{.VideoId}}</li>
-      {{end}}
+      {[{range .results}]}
+      <li>{[{.ShowId}]} {[{.ListId}]} {[{.VideoId}]}</li>
+      {[{end}]}
     </ul>
   </div>
 </div>
