--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -72,14 +72,17 @@
             <td><a target="_blank" href="http://www.thetvthailand.com/cms/findvideo/?url=https://www.youtube.com/{{video.UserType}}/{{video.Username}}/videos">{{video.Description}}</a>
               <a href="#"><span class="glyphicon glyphicon-th-list" ng-click="selectUsername(video)"></span></a>
             </td>
-            <td>{{video.Title}}</td><td><input type="text" ng-click="setSumId(video)" size="10" value="{{video.VideoId}}" /></td>
+            <td>{{video.Title}}</td><td><input type="text" ng-click="setSumId(video); style='selected-text'"  ng-class="style" size="10" value="{{video.VideoId}}" /></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v={{video.VideoId}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
             <td>{{video.Published}}</td>
             <td><a target="_blank" href="http://tv-cms.makathon.com/bookmarktv.php?url=http://www.youtube.com/watch?v={{video.VideoId}}"><span class="glyphicon glyphicon-thumbs-up"></span></a></td>
           </tr>
       </table>
       <div class="row">
-        <div class="col-md-2 col-md-offset-5"><input type="button" ng-click="loadData(nextPage)" ng-show="isNext" class="btn btn-default" value="Load More..." /></div>
+        <div class="col-md-2 col-md-offset-5">
+          <input type="button" ng-click="loadData(nextPage)" ng-show="isNext" class="btn btn-default" value="Load More..." />
+          <img ng-show="isLoading" src="/static/images/loading.gif" />
+        </div>
       </div>
     </form>
   </div>
@@ -94,6 +97,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
     $scope.countSumId = 0;
     $scope.videos = [];
     $scope.isNext = false;
+    $scope.isLoading = false;
 
     $scope.nextPage = 1;
 
@@ -113,15 +117,18 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
 
     $scope.loadData = function(page){
       $scope.isNext = false;
+      $scope.isLoading = true;
       $http.get('/admin/botvideo.json', { params:{
                                             username: $scope.username,
                                             status: $scope.status,
                                             page: page,
                                             time: Date.now()}}).
         error(function(){
+          $scope.isLoading = false;
           $scope.isNext = (page > 0);
         }).
         success(function(data){
+          $scope.isLoading = false;
           if (data.CurrentPage == 0) {
             $scope.videos = data.Videos;
           } else {
