--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -8,7 +8,7 @@
 
         <!-- CSS -->
         <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="/bower_components/chosen_v1.0.0/chosen.min.css" />
+        <link href="/bower_components/chosen_v1.0.0/chosen.min.css" rel="stylesheet">
         <link href="/static/css/base.css" rel="stylesheet">
         <!-- JS -->
         <script src="/bower_components/jquery/dist/jquery.min.js"></script>
