edit tmpl add link youtube video user page

--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -154,6 +154,7 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
           <tr ng-repeat="video in videos">
             <td><input type="checkbox" class="cb_bot_video" name="bot_video[]" value="{{video.Id}}"/></td>
             <td><a target="_blank" href="http://www.thetvthailand.com/cms/findvideo/?url=https://www.youtube.com/{{video.UserType}}/{{video.Username}}/videos">{{video.Description}}</a>
+              <a  target="_blank" href="https://www.youtube.com/{{video.UserType}}/{{video.Username}}/videos"><span class="glyphicon glyphicon-new-window"></span></a>
               <a href="#"><span class="glyphicon glyphicon-th-list" ng-click="selectUsername(video)"></span></a>
             </td>
             <td>{{video.Title}}</td><td><input type="text" ng-click="setSumId(video); style='selected-text'"  ng-class="style" size="10" value="{{video.VideoId}}" /></td>
