--- a/templates/admin/botvideo.tmpl
+++ b/templates/admin/botvideo.tmpl
@@ -11,26 +11,26 @@ $(function(){
 var tvModule = angular.module('TVThailand', []);
 tvModule.controller('BotVideoCtrl', function ($scope, $http) {
     $scope.status = {[{.formSearch.Status}]};
-    $scope.sumId = "";
-    $scope.countSumId = 0;
+    $scope.sumID = "";
+    $scope.countSumID = 0;
     $scope.videos = [];
     $scope.isNext = false;
     $scope.isLoading = false;
 
     $scope.nextPage = 1;
 
-    $scope.setSumId = function(video){
-      if($scope.sumId.length > 0) {
-        $scope.sumId += ","
+    $scope.setSumID = function(video){
+      if($scope.sumID.length > 0) {
+        $scope.sumID += ","
       }
-      $scope.sumId += video.VideoId;
+      $scope.sumID += video.VideoID;
       $scope.sumTitle = video.Title;
-      $scope.countSumId = $scope.sumId.split(",").length
+      $scope.countSumID = $scope.sumID.split(",").length
     };
     $scope.clearSum = function(){
       $scope.sumTitle = "";
-      $scope.sumId = "";
-      $scope.countSumId = 0;
+      $scope.sumID = "";
+      $scope.countSumID = 0;
     };
 
     $scope.loadData = function(page){
@@ -66,11 +66,11 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
     };
 
     $scope.linkUpdate = function(video){
-      var paramProgramId = ""
-      if (video.ProgramId > 0) {
-        paramProgramId = "&program_id=" + video.ProgramId;
+      var paramProgramID = ""
+      if (video.ProgramID > 0) {
+        paramProgramID = "&program_ID=" + video.ProgramID;
       }
-      return "http://tv-cms.makathon.com/bookmarktv.php?url=http://www.youtube.com/watch?v=" + video.VideoId + paramProgramId;
+      return "http://tv-cms.makathon.com/bookmarktv.php?url=http://www.youtube.com/watch?v=" + video.VideoID + paramProgramID;
     };
 
     $scope.selectUsername = function(video){
@@ -96,16 +96,16 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
       <div class="form-group">
         <label for="inputUsername" class="col-sm-2 control-label">Username</label>
         <div class="col-sm-10">
-          <select id="inputUsername" name="username" ng-model="username" ng-change="loadData(0)" class="chosen-select" style="width:350px;">
+          <select ID="inputUsername" name="username" ng-model="username" ng-change="loadData(0)" class="chosen-select" style="wIDth:350px;">
             <option value="">All</option>
             {[{range .botUsers}]}
               <option value="{[{.Username}]}" {[{if .IsSelected}]} selected="selected" {[{end}]}>{[{.Description}]} - {[{.Username}]}</option>
             {[{end}]}
           </select>
 
-          <select id="inputStatus" name="status" ng-model="status" ng-change="loadData(0)" >
+          <select ID="inputStatus" name="status" ng-model="status" ng-change="loadData(0)" >
             {[{range .botStatuses}]}
-              <option value="{[{.Id}]}" {[{if .IsSelected}]} selected="selected" {[{end}]}>{[{.Name}]}</option>
+              <option value="{[{.ID}]}" {[{if .IsSelected}]} selected="selected" {[{end}]}>{[{.Name}]}</option>
             {[{end}]}
           </select>
 
@@ -116,25 +116,25 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
     <br />
     <h4></h4>
     <form class="form-horizontal" role="form" method="POST" action="/admin/botvideo">
-      <input type="hidden" name="username" value="{{username}}" />
-      <input type="hidden" name="status" value="{{status}}" />
+      <input type="hIDden" name="username" value="{{username}}" />
+      <input type="hIDden" name="status" value="{{status}}" />
 
       <div class="form-group">
         <label for="inputTitle" class="col-sm-2 control-label">Title</label>
         <div class="col-sm-10">
-          <input type="text" ng-model="sumTitle" class="form-control" id="inputTitle" placeholder="">
+          <input type="text" ng-model="sumTitle" class="form-control" ID="inputTitle" placeholder="">
         </div>
       </div>
       <div class="form-group">
-        <label for="sumId" class="col-sm-2 control-label">Sum Id [ {{countSumId}} ]</label>
+        <label for="sumID" class="col-sm-2 control-label">Sum ID [ {{countSumID}} ]</label>
         <div class="col-sm-10">
-          <input type="text" ng-model="sumId" class="form-control" id="sumId" placeholder="">
+          <input type="text" ng-model="sumID" class="form-control" ID="sumID" placeholder="">
         </div>
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <a class="btn btn-success" id="btn_update" target="_blank" href="http://tv-cms.makathon.com/bookmarktv.php?id={{sumId}}&amp;title={{sumTitle}}" ng-show="sumId">Update</a>
-          <input type="button" ng-click="clearSum()" class="btn btn-warning" id="btn_clear" value="Clear" />
+          <a class="btn btn-success" ID="btn_update" target="_blank" href="http://tv-cms.makathon.com/bookmarktv.php?ID={{sumID}}&amp;title={{sumTitle}}" ng-show="sumID">Update</a>
+          <input type="button" ng-click="clearSum()" class="btn btn-warning" ID="btn_clear" value="Clear" />
         </div>
       </div>
       <br />
@@ -145,20 +145,20 @@ tvModule.controller('BotVideoCtrl', function ($scope, $http) {
 
       <table class="table table-striped">
         <thead>
-            <th><input type="checkbox" id="cb_bot_video" /></th>
-            <th>Username</th><th>Title</th><th>VideoId</th>
+            <th><input type="checkbox" ID="cb_bot_video" /></th>
+            <th>Username</th><th>Title</th><th>VideoID</th>
             <th><span class="glyphicon glyphicon-play-circle"></span></th>
             <th>Published</th>
             <th><span class="glyphicon glyphicon-thumbs-up"></span></th>
         </thead>
           <tr ng-repeat="video in videos">
-            <td><input type="checkbox" class="cb_bot_video" name="bot_video[]" value="{{video.Id}}"/></td>
+            <td><input type="checkbox" class="cb_bot_video" name="bot_video[]" value="{{video.ID}}"/></td>
             <td><a target="_blank" href="http://www.thetvthailand.com/cms/findvideo/?url=https://www.youtube.com/{{video.UserType}}/{{video.Username}}/videos">{{video.Description}}</a>
               <a  target="_blank" href="https://www.youtube.com/{{video.UserType}}/{{video.Username}}/videos"><span class="glyphicon glyphicon-new-window"></span></a>
               <a href="#"><span class="glyphicon glyphicon-th-list" ng-click="selectUsername(video)"></span></a>
             </td>
-            <td>{{video.Title}}</td><td><input type="text" ng-click="setSumId(video); style='selected-text'"  ng-class="style" size="10" value="{{video.VideoId}}" /></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v={{video.VideoId}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
+            <td>{{video.Title}}</td><td><input type="text" ng-click="setSumID(video); style='selected-text'"  ng-class="style" size="10" value="{{video.VideoID}}" /></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v={{video.VideoID}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
             <td>{{video.Published}}</td>
             <td><a target="_blank" href="{{linkUpdate(video)}}"><span class="glyphicon glyphicon-thumbs-up"></span></a></td>
           </tr>
