--- a/templates/admin/encrypt.tmpl
+++ b/templates/admin/encrypt.tmpl
@@ -4,15 +4,15 @@
     <form method="post" action="">
       <input type="radio" name="idType" value="mthaiparseurl" checked> MThai Parse Url<br />
       -<br />
-      <input type="radio" name="idType" value="showid"> Show Id<br />
-      <input type="radio" name="idType" value="listid"> List Id<br />
+      <input type="radio" name="idType" value="showid"> Show ID<br />
+      <input type="radio" name="idType" value="listid"> List ID<br />
       <label for="">Id</label> : <input name="id" value='{[{.showid}]}' /><br />
       <input type="submit" class="btn btn-primary btn-lg" role="button" value="Submit">
     </form>
     <h3>{[{.message}]}</h3>
     <ul>
       {[{range .results}]}
-      <li>{[{.ShowId}]} {[{.ListId}]} {[{.VideoId}]}</li>
+      <li>{[{.ShowID}]} {[{.ListID}]} {[{.VideoID}]}</li>
       {[{end}]}
     </ul>
   </div>
